# face-recognition

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.webcam.yaml  docker-compose.yaml  nginx.conf  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt  rest-api.http  web-entrypoint.sh  webcam_daemon.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py  31714ff8d01c_remove_user_id_column.py  781f00c76af7_add_auto_capture_columns.py  d6546cce3b75_change_id_to_bigint_autoincrement.py  f1f65fa53cc6_add_verified_by_processor_column.py  f8495daf9f9f_add_insightface_embedding_column.py
sample_data/: README.md
scripts/: batch_enroll.py  download_models.py
src/: exceptions.py  main.py
src/antispoof/: __init__.py  crop_image.py  predictor.py  utility.py
src/api/: routes.py  schemas.py
src/cache/: __init__.py  redis_client.py
src/config/: settings.py
src/database/: base.py  models.py  repository.py
src/middleware/: auth.py
src/providers/: aws_rekognition.py  base.py  collection_manager.py  factory.py  insightface_provider.py  liveness_base.py  silent_face_liveness.py
src/services/: auto_capture_service.py  door_service.py  face_service.py  hybrid_face_service.py  multiface_service.py  recognition_strategies.py  template_service.py  webcam_service.py
src/storage/: base.py  factory.py  s3.py  (+1 more)
tests/: conftest.py
web/: index.html  package-lock.json  package.json  vite.config.js
(+35 files in other folders)
